dev/apps/nodejsapp/nodejsapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp
  labels:
    app: nodejsapp
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: nodejsapp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp
spec:
  selector:
    matchLabels:
      app: nodejsapp
      version: v1
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nodejsapp
        version: v1
    spec:
      #imagePullSecrets:
      #  - name: regcred
      containers:
        - name: nodejsapp
          image: edisaac/nodejsapp:c9f8dd3.5 
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3000
  revisionHistoryLimit: 2 # Limita el historial de revisiones a 3
